# Back

./: .gitignore  CMakeLists.txt  Makefile  README.md  back.c  clean  config.c  config.h  run_tests
.github/workflows/: main.yml
code/: CMakeLists.txt
code/back/: CMakeLists.txt
code/back/cmake/: backConfig.h.in
code/back/include/: config.h  local.h
code/back/src/: argprocessor.c  argprocessor.h  back.c  config.c  local.c
code/src/: CMakeLists.txt  back.c  config.c  config.h
code/tests/: CMakeLists.txt  t_CMakeLists.txt  test_run.c
code/tests/configs/: config.yaml  missing_home.yaml  missing_hostname.yaml  missing_location.yaml  missing_username.yaml  normal.yaml
code/tests/src/: test_config.c  test_local.c
src/: back.c  config.c  config.h
